# octodns-netbox

./: .codeclimate.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  renovate.json  requirements.txt  setup.py  tox.ini
.github/: .codecov.yml
.github/workflows/: ci.yml  release.yml
octodns_netbox/: __init__.py  reversename.py
tests/: test_octodns_netbox.py  test_reversename.py  util.py
tests/fixtures/: ip_addresses_example_com.json  ip_addresses_subdomain1_example_com.json  ip_addresses_v4_non_octet_boundary.json  ip_addresses_v4_non_octet_boundary_vrf_mgmt.json  ip_addresses_v4_octet_boundary.json  ip_addresses_v4_octet_boundary_duplicated_address.json  ip_addresses_v4_octet_boundary_vrf_global.json  ip_addresses_v6_nibble_boundary.json  ip_addresses_v6_non_nibble_boundary.json  vrf.json  vrfs.json
