[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]

[project]
authors = [
  {name = "Tagawa, Masaki", email = "masaki@tagawa.email"}
]
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: MIT License',
  'Natural Language :: English',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14'
]
dependencies = [
  "octodns (>=1.10.0,<2.0.0)",
  "pydantic (>=2.10.5,<3.0.0)",
  "pynetbox (>=7.4.1,<8.0.0)",
  "requests (>=2.32.3,<3.0.0)"
]
description = "A NetBox source for octoDNS."
dynamic = ["version"]
homepage = "https://github.com/sukiyaki/octodns-netbox"
license = "MIT"
name = "octodns-netbox"
readme = "README.md"
requires-python = ">=3.10,<4"

[tool.poetry]
version = "0.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
pytest = "^9.0.0"
pytest-cov = "^7.0.0"
requests-mock = "^1.12.0"
tox = "^4.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = {version = ">=1.0.0,<2.0.0", extras = ["plugin"]}

[tool.poetry-dynamic-versioning]
bump = true
enable = true
metadata = false
style = "pep440"
vcs = "git"
